@@ -6,5 +6,6 @@ RUN ./mvnw clean package -DskipTests
 FROM eclipse-temurin:17-jre-jammy
 WORKDIR /app
 COPY --from=builder /app/target/*.jar mycoworking.jar
-EXPOSE 8080
+EXPOSE 80
+ENV JAVA_TOOL_OPTIONS="-XX:+UseZGC"
 ENTRYPOINT ["java", "-jar", "mycoworking.jar"]
